tests/suite/errors/e11_arithmetic_on_bool.rs
// err: arithmetic on non-numeric

fn main() {
    let x: bool = true;
    let y: bool = x + true;
}
